--- a/manifests/prod/cilium/Role-cilium-config-agent.yaml
+++ b/manifests/prod/cilium/Role-cilium-config-agent.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/part-of: cilium
   name: cilium-config-agent
-  namespace: cilium
+  namespace: kube-system
 rules:
   - apiGroups:
       - ""
