--- a/manifests/prod/cilium/Service-hubble-peer.yaml
+++ b/manifests/prod/cilium/Service-hubble-peer.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/part-of: cilium
     k8s-app: cilium
   name: hubble-peer
-  namespace: cilium
+  namespace: kube-system
 spec:
   internalTrafficPolicy: Local
   ports:
