--- a/manifests/prod/cilium/DaemonSet-cilium-envoy.yaml
+++ b/manifests/prod/cilium/DaemonSet-cilium-envoy.yaml
@@ -7,7 +7,7 @@ metadata:
     k8s-app: cilium-envoy
     name: cilium-envoy
   name: cilium-envoy
-  namespace: cilium
+  namespace: kube-system
 spec:
   selector:
     matchLabels:
