--- a/manifests/prod/cilium/RoleBinding-cilium-config-agent.yaml
+++ b/manifests/prod/cilium/RoleBinding-cilium-config-agent.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/part-of: cilium
   name: cilium-config-agent
-  namespace: cilium
+  namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -12,4 +12,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: cilium
-    namespace: cilium
+    namespace: kube-system
