--- a/manifests/prod/cilium/ConfigMap-cilium-config.yaml
+++ b/manifests/prod/cilium/ConfigMap-cilium-config.yaml
@@ -7,7 +7,7 @@ data:
   bpf-events-policy-verdict-enabled: "true"
   bpf-events-trace-enabled: "true"
   bpf-lb-acceleration: disabled
-  bpf-lb-external-clusterip: "false"
+  bpf-lb-external-clusterip: "true"
   bpf-lb-map-max: "65536"
   bpf-lb-sock: "false"
   bpf-lb-sock-hostns-only: "true"
@@ -120,7 +120,7 @@ data:
   proxy-xff-num-trusted-hops-egress: "0"
   proxy-xff-num-trusted-hops-ingress: "0"
   remove-cilium-node-taints: "true"
-  routing-mode: native
+  routing-mode: tunnel
   service-no-backend-response: reject
   set-cilium-is-up-condition: "true"
   set-cilium-node-taints: "true"
@@ -131,6 +131,7 @@ data:
   tofqdns-idle-connection-grace-period: 0s
   tofqdns-max-deferred-connection-deletes: "10000"
   tofqdns-proxy-response-max-delay: 100ms
+  tunnel-protocol: vxlan
   unmanaged-pod-watcher-interval: "15"
   vtep-cidr: ""
   vtep-endpoint: ""
