--- a/manifests/prod/cilium/ClusterRole-cilium-operator.yaml
+++ b/manifests/prod/cilium/ClusterRole-cilium-operator.yaml
@@ -143,6 +143,13 @@ rules:
       - delete
       - patch
   - apiGroups:
+      - cilium.io
+    resources:
+      - ciliumbgpclusterconfigs/status
+      - ciliumbgppeerconfigs/status
+    verbs:
+      - update
+  - apiGroups:
       - apiextensions.k8s.io
     resources:
       - customresourcedefinitions
@@ -188,6 +195,7 @@ rules:
       - ciliumbgppeeringpolicies
       - ciliumbgpclusterconfigs
       - ciliumbgpnodeconfigoverrides
+      - ciliumbgppeerconfigs
     verbs:
       - get
       - list
