--- a/manifests/prod/cilium/ConfigMap-cilium-config.yaml
+++ b/manifests/prod/cilium/ConfigMap-cilium-config.yaml
@@ -3,14 +3,18 @@ data:
   agent-not-ready-taint-key: node.cilium.io/agent-not-ready
   arping-refresh-period: 30s
   auto-direct-node-routes: "false"
+  bpf-distributed-lru: "false"
   bpf-events-drop-enabled: "true"
   bpf-events-policy-verdict-enabled: "true"
   bpf-events-trace-enabled: "true"
   bpf-lb-acceleration: disabled
+  bpf-lb-algorithm-annotation: "false"
   bpf-lb-external-clusterip: "true"
   bpf-lb-map-max: "65536"
+  bpf-lb-mode-annotation: "false"
   bpf-lb-sock: "false"
   bpf-lb-sock-hostns-only: "true"
+  bpf-lb-source-range-all-types: "false"
   bpf-map-dynamic-size-ratio: "0.0025"
   bpf-policy-map-max: "16384"
   bpf-root: /sys/fs/bpf
@@ -26,6 +30,7 @@ data:
   datapath-mode: veth
   debug: "false"
   debug-verbose: ""
+  default-lb-service-ipam: lbipam
   direct-routing-skip-unreachable: "false"
   dnsproxy-enable-transparent-mode: "true"
   dnsproxy-socket-linger-timeout: "10"
@@ -33,7 +38,9 @@ data:
   enable-auto-protect-node-port-range: "true"
   enable-bpf-clock-probe: "false"
   enable-endpoint-health-checking: "true"
+  enable-endpoint-lockdown-on-policy-overflow: "false"
   enable-envoy-config: "true"
+  enable-experimental-lb: "false"
   enable-gateway-api: "true"
   enable-gateway-api-alpn: "true"
   enable-gateway-api-app-protocol: "true"
@@ -43,6 +50,7 @@ data:
   enable-health-check-nodeport: "true"
   enable-health-checking: "true"
   enable-hubble: "true"
+  enable-internal-traffic-policy: "true"
   enable-ipv4: "true"
   enable-ipv4-big-tcp: "false"
   enable-ipv4-masquerade: "true"
@@ -53,18 +61,23 @@ data:
   enable-k8s-terminating-endpoint: "true"
   enable-l2-neigh-discovery: "true"
   enable-l7-proxy: "true"
+  enable-lb-ipam: "true"
   enable-local-redirect-policy: "false"
   enable-masquerade-to-route-source: "false"
   enable-metrics: "true"
   enable-node-selector-labels: "false"
+  enable-non-default-deny-policies: "true"
   enable-policy: default
+  enable-policy-secrets-sync: "true"
   enable-runtime-device-detection: "true"
   enable-sctp: "false"
+  enable-source-ip-verification: "true"
   enable-svc-source-range-check: "true"
   enable-tcx: "true"
   enable-vtep: "false"
   enable-well-known-identities: "false"
   enable-xt-socket-fallback: "true"
+  envoy-access-log-buffer-size: "4096"
   envoy-base-id: "0"
   envoy-config-retry-interval: 15s
   envoy-keep-cap-netbindservice: "false"
@@ -74,6 +87,8 @@ data:
   gateway-api-secrets-namespace: cilium-secrets
   gateway-api-service-externaltrafficpolicy: Cluster
   gateway-api-xff-num-trusted-hops: "0"
+  health-check-icmp-failure-threshold: "3"
+  http-retry-count: "3"
   hubble-disable-tls: "false"
   hubble-export-file-max-backups: "5"
   hubble-export-file-max-size-mb: "10"
@@ -88,8 +103,7 @@ data:
   install-no-conntrack-iptables-rules: "false"
   ipam: kubernetes
   ipam-cilium-node-update-rate: 15s
-  k8s-client-burst: "20"
-  k8s-client-qps: "10"
+  iptables-random-fully: "false"
   k8s-require-ipv4-pod-cidr: "false"
   k8s-require-ipv6-pod-cidr: "false"
   kube-proxy-replacement: "true"
@@ -110,11 +124,14 @@ data:
   operator-api-serve-addr: 127.0.0.1:9234
   operator-prometheus-serve-addr: :9963
   policy-cidr-match-mode: ""
+  policy-secrets-namespace: cilium-secrets
+  policy-secrets-only-from-secrets-namespace: "true"
   preallocate-bpf-maps: "false"
   procfs: /host/proc
   proxy-connect-timeout: "2"
   proxy-idle-timeout-seconds: "60"
   proxy-initial-fetch-timeout: "30"
+  proxy-max-concurrent-retries: "128"
   proxy-max-connection-duration-seconds: "0"
   proxy-max-requests-per-connection: "0"
   proxy-xff-num-trusted-hops-egress: "0"
@@ -127,11 +144,12 @@ data:
   synchronize-k8s-nodes: "true"
   tofqdns-dns-reject-response-code: refused
   tofqdns-enable-dns-compression: "true"
-  tofqdns-endpoint-max-ip-per-hostname: "50"
+  tofqdns-endpoint-max-ip-per-hostname: "1000"
   tofqdns-idle-connection-grace-period: 0s
   tofqdns-max-deferred-connection-deletes: "10000"
   tofqdns-proxy-response-max-delay: 100ms
   tunnel-protocol: vxlan
+  tunnel-source-port-range: 0-0
   unmanaged-pod-watcher-interval: "15"
   vtep-cidr: ""
   vtep-endpoint: ""
