--- a/manifests/prod/tailscale-operator/CustomResourceDefinition-proxygroups-tailscale-com.yaml
+++ b/manifests/prod/tailscale-operator/CustomResourceDefinition-proxygroups-tailscale-com.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.1-0.20240618033008-7824932b0cab
+    controller-gen.kubebuilder.io/version: v0.17.0
   name: proxygroups.tailscale.com
 spec:
   group: tailscale.com
@@ -20,9 +20,24 @@ spec:
           jsonPath: .status.conditions[?(@.type == "ProxyGroupReady")].reason
           name: Status
           type: string
+        - description: ProxyGroup type.
+          jsonPath: .spec.type
+          name: Type
+          type: string
       name: v1alpha1
       schema:
         openAPIV3Schema:
+          description: |-
+            ProxyGroup defines a set of Tailscale devices that will act as proxies.
+            Currently only egress ProxyGroups are supported.
+
+            Use the tailscale.com/proxy-group annotation on a Service to specify that
+            the egress proxy should be implemented by a ProxyGroup instead of a single
+            dedicated proxy. In addition to running a highly available set of proxies,
+            ProxyGroup also allows for serving many annotated Services from a single
+            set of proxies to minimise resource consumption.
+
+            More info: https://tailscale.com/kb/1438/kubernetes-operator-cluster-egress
           properties:
             apiVersion:
               description: |-
@@ -66,6 +81,7 @@ spec:
                     Replicas specifies how many replicas to create the StatefulSet with.
                     Defaults to 2.
                   format: int32
+                  minimum: 0
                   type: integer
                 tags:
                   description: |-
@@ -80,10 +96,16 @@ spec:
                     type: string
                   type: array
                 type:
-                  description: Type of the ProxyGroup proxies. Currently the only supported type is egress.
+                  description: |-
+                    Type of the ProxyGroup proxies. Currently the only supported type is egress.
+                    Type is immutable once a ProxyGroup is created.
                   enum:
                     - egress
+                    - ingress
                   type: string
+                  x-kubernetes-validations:
+                    - message: ProxyGroup type is immutable
+                      rule: self == oldSelf
               required:
                 - type
               type: object
