--- a/manifests/prod/romm/Deployment-romm.yaml
+++ b/manifests/prod/romm/Deployment-romm.yaml
@@ -31,7 +31,7 @@ spec:
         checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
         checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
         checksum/redis: 1c39d3140d64da8c5d6e51f123a2bc5860e37728cf0cff528c1789b1b6f36cb1
-        checksum/secrets: 034c8da8d6f26e3e80c68a24fb1514ab94fd8ef1baa4869a3b150bf1be7692e0
+        checksum/secrets: 11c69841b95a9685b7b18d1fa9a60eae331ab1fed64afa522a8813592302bfb3
         checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
         checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
       labels:
@@ -211,7 +211,7 @@ spec:
       hostIPC: false
       hostNetwork: false
       hostPID: false
-      hostUsers: true
+      hostUsers: false
       initContainers:
         - command:
             - /bin/sh
