feat: enable authentik in romm

--- a/manifests/prod/romm/SopsSecret-romm-secrets.yaml
+++ b/manifests/prod/romm/SopsSecret-romm-secrets.yaml
@@ -24,8 +24,8 @@ sops:
         -----END AGE ENCRYPTED FILE-----
       recipient: age1qcn2u0r03z48ytvn9tts9pkllyj9qx7zl4w0yn6uscghv3f5y9jqmvyy69
   encrypted_regex: ^(data|stringData)$
-  lastmodified: "2025-04-20T20:55:10Z"
-  mac: ENC[AES256_GCM,data:k6ujDHzaaxHs6jtjo9jHuGJRELYML3ku6mmBWlNFliO2uvosgAx69tvGTkNYw9kJxH7WwDD0Prs75SnouvDqa2WaEIB3W/KfMBHgEAM7criYa5CYvw/FXu/D4m7LRNwyaYrpyDReWAnHEDkt1o2QFSVxCSJkK6hLIZvPxqvwezs=,iv:kdff9YXKaqrP/Av5Mw1QqHiZ8zB8DaeykSH94MdLfNk=,tag:Mn+nCRRLbe170lh2T35LpQ==,type:str]
+  lastmodified: "2025-04-21T03:23:24Z"
+  mac: ENC[AES256_GCM,data:PTZ4WYSPzQ//Xj5c060Ewtn+Ljv9NYEWBGEAyc2oraChsNCyzuHU1yronnqR83olGGgaNgZazYCCu0UlTpbGIYGNaJ6oP8MaBnRzBa/FNB/BIdm4A3Z6ARRNVzrsIsp1lEyG7MDApe44hZOnHV1czrcnhEhBIHc8/ClMHJAq2Qw=,iv:cRW/meDKFi7ouYzzoY4Tm0kiAQLWDaPG/15TmHY8GKg=,tag:OIDYKm2OXkT/ujyFORCgXA==,type:str]
   version: 3.10.2
 spec:
   secretTemplates:
@@ -33,5 +33,10 @@ spec:
       stringData:
         IGDB_CLIENT_ID: ENC[AES256_GCM,data:SAMCavxlt2RunKxkJnXydPH9fOxXvZkfxMw/AzQa,iv:BxRLlCWhohIB/zIuZGenIbsxsmLoBqq+QDAWxATlNh0=,tag:GT/anJwlRA3Kt3vtc7a61g==,type:str]
         IGDB_CLIENT_SECRET: ENC[AES256_GCM,data:S0trPNdXWxgQVcoiC2BjUMuSR0ROJQ8SjtLmsiuk,iv:gc57cr1+1XfnK741XakoHd6dWybEEky81QY6JLQ48AA=,tag:7xJ4onMRnPzfRiteyEa4pw==,type:str]
+        OIDC_CLIENT_ID: ENC[AES256_GCM,data:jQPrWEM5KKuhUNT0HrrwAKy2yJu1397pLQpXpSVNv3NhpFvfu16Q0A==,iv:GHo6JYQ5CtSpTsYRlvxQxilsQGgho4jCXC+SBBu74vI=,tag:LSReFLz+eS+x/gldnbWTEw==,type:str]
+        OIDC_CLIENT_SECRET: ENC[AES256_GCM,data:qus3BpdsqJp5zSvyegmy5xu33ZjA6Uvrt28y++FaOrnPkNXT+Cg5uGKTf6IEbAIpLfJqvCiDKyZy3C6p3gr5yGmhU/7R43uTSoEhRCdUfGlrfyCV2JhmETn+Y7nvFihVYodv8Sql8yXdd6aJflyLYHhOwMmorMkq+d8ta520AXo=,iv:AvTWItiNFelQfTdRug1e0ODtrM9gIG3KyMKmSEnHntY=,tag:AaBkl/zwhygQGzPS90eQYQ==,type:str]
+        OIDC_PROVIDER: ENC[AES256_GCM,data:6FV++6CbLcGa,iv:PBAJ48O5Y1d97SzXu/gfTdDK4QgpCl2knr6B56xvcm0=,tag:SAKMd1UrCZ1m4RCXfLSwBA==,type:str]
+        OIDC_REDIRECT_URI: ENC[AES256_GCM,data:1Z3hY+E1nvrDP70+M/A6mvu5j17moQnMhNb+ykw7cJSO+e+dTilJAjeMpsk0L09eiCEWWSc=,iv:2Nz4li63VoWANnrmgUg/2nj/rOROjlf6WIRllvAMT7M=,tag:emkrsjnvx8ly1KqCDpwRiw==,type:str]
+        OIDC_SERVER_APPLICATION_URL: ENC[AES256_GCM,data:rrXu/pUBYcxhAHu9+vB+WkHpMXdTb9JXDYwP4meBUYp/ZMKehXZkCiA=,iv:deHzvJlSZ0eeaKitukdHnL1MIr9inQLujcL+ugZXAhs=,tag:SBF0Pn3p1BxtnWSNfz0PVw==,type:str]
         ROMM_AUTH_SECRET_KEY: ENC[AES256_GCM,data:RMIofo3f8JBieye8kNiysTvbAPrZt3ka3DxnpS5BPiMD19YDsZPqfbIwBPNSvmCqi/m1yI4iW8aGl6ibrMyeGw==,iv:oCq1uL0iPUaAxZ9ZIWZ4NZlKO5UoEHpkQcwBmQZ0Yes=,tag:pZxRFmT4vB+HV4/0pi0IWw==,type:str]
   suspend: false
