--- a/manifests/prod/romm/Deployment-romm.yaml
+++ b/manifests/prod/romm/Deployment-romm.yaml
@@ -31,7 +31,7 @@ spec:
         checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
         checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
         checksum/redis: 1c39d3140d64da8c5d6e51f123a2bc5860e37728cf0cff528c1789b1b6f36cb1
-        checksum/secrets: 11c69841b95a9685b7b18d1fa9a60eae331ab1fed64afa522a8813592302bfb3
+        checksum/secrets: 7ef977e2ecfc5035ce4577fd2c4030bc930e40cb7326b083fc64ba6893f5daa5
         checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
         checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
       labels:
@@ -82,6 +82,8 @@ spec:
               value: "3306"
             - name: DB_USER
               value: romm
+            - name: DISABLE_CSRF_PROTECTION
+              value: "true"
             - name: IGDB_CLIENT_ID
               valueFrom:
                 secretKeyRef:
@@ -91,6 +93,33 @@ spec:
               valueFrom:
                 secretKeyRef:
                   key: IGDB_CLIENT_SECRET
+                  name: romm-secrets
+            - name: OIDC_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  key: OIDC_CLIENT_ID
+                  name: romm-secrets
+            - name: OIDC_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  key: OIDC_CLIENT_SECRET
+                  name: romm-secrets
+            - name: OIDC_ENABLED
+              value: "true"
+            - name: OIDC_PROVIDER
+              valueFrom:
+                secretKeyRef:
+                  key: OIDC_PROVIDER
+                  name: romm-secrets
+            - name: OIDC_REDIRECT_URI
+              valueFrom:
+                secretKeyRef:
+                  key: OIDC_REDIRECT_URI
+                  name: romm-secrets
+            - name: OIDC_SERVER_APPLICATION_URL
+              valueFrom:
+                secretKeyRef:
+                  key: OIDC_SERVER_APPLICATION_URL
                   name: romm-secrets
             - name: REDIS_HOST
               valueFrom:
