--- a/manifests/prod/romm/Deployment-romm.yaml
+++ b/manifests/prod/romm/Deployment-romm.yaml
@@ -31,7 +31,7 @@ spec:
         checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
         checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
         checksum/redis: 1c39d3140d64da8c5d6e51f123a2bc5860e37728cf0cff528c1789b1b6f36cb1
-        checksum/secrets: 7ef977e2ecfc5035ce4577fd2c4030bc930e40cb7326b083fc64ba6893f5daa5
+        checksum/secrets: 8d6a4a60e63c3b17e424d1e03c950b4f45e7973f398a66e1772e82f8100fb160
         checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
         checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
       labels:
@@ -240,7 +240,7 @@ spec:
       hostIPC: false
       hostNetwork: false
       hostPID: false
-      hostUsers: false
+      hostUsers: true
       initContainers:
         - command:
             - /bin/sh
