--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -32,6 +32,15 @@ controlPlane:
         apiServer:
           extraArgs:
             feature-gates: UserNamespacesSupport=true,UserNamespacesPodSecurityStandards=true
+        proxy:
+          extraArgs:
+            metrics-bind-address: 0.0.0.0
+        controllerManager:
+          extraArgs:
+            bind-address: 0.0.0.0
+        scheduler:
+          extraArgs:
+            bind-address: 0.0.0.0
       machine:
         sysctls:
           user.max_user_namespaces: "11255"
