--- a/talos/talconfig.yaml
+++ b/talos/talconfig.yaml
@@ -41,6 +41,9 @@ controlPlane:
         scheduler:
           extraArgs:
             bind-address: 0.0.0.0
+        etcd:
+          extraArgs:
+            listen-metrics-urls: http://0.0.0.0:2381
       machine:
         sysctls:
           user.max_user_namespaces: "11255"
