--- a/manifests/prod/nextcloud/Ingress-nextcloud.yaml
+++ b/manifests/prod/nextcloud/Ingress-nextcloud.yaml
@@ -1,6 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    tailscale.com/funnel: "true"
   labels:
     app.kubernetes.io/component: app
     app.kubernetes.io/instance: nextcloud
