--- a/manifests/prod/romm/Ingress-romm.yaml
+++ b/manifests/prod/romm/Ingress-romm.yaml
@@ -1,6 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  annotations:
+    tailscale.com/funnel: "true"
   name: romm
   namespace: romm
 spec:
