--- a/modules/romm/ingress.yaml
+++ b/modules/romm/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: romm
+  annotations:
+    tailscale.com/funnel: "true"
 spec:
   defaultBackend:
     service:
