feat(romm): enable hasheous and playmatch

--- a/manifests/prod/romm/Deployment-romm.yaml
+++ b/manifests/prod/romm/Deployment-romm.yaml
@@ -31,7 +31,7 @@ spec:
         checksum/mongodb: 09c85576cb45b1eecd1467732b11ea8fa3363b0105c465f02a6ad64991521d52
         checksum/persistence: 93f297b2dc801369910048359b61f369b9fa6ef724d690f7364d70cf9aeb0073
         checksum/redis: c6e342425626fae052fbec4ba628c4fc30512aa3589265a3627e9ae8b21d17c9
-        checksum/secrets: 6ad340d04a63695127ce96198cded53015c99f661f0fe594afc62c98c04a6678
+        checksum/secrets: c4c8b79a836748ef43d5c09e9c373edbe5c4520dc75df02a39a2cc82bbad8a87
         checksum/services: 4b546be00d25ad56b44b4d24cbff97d9830c9d79b2a43912df4e5912c109bf16
         checksum/solr: 29c14feeaddbf7762052db593898d274941f539cee681ddc613957587686f347
       labels:
@@ -85,6 +85,8 @@ spec:
               value: romm
             - name: DISABLE_CSRF_PROTECTION
               value: "true"
+            - name: HASHEOUS_API_ENABLED
+              value: "true"
             - name: IGDB_CLIENT_ID
               valueFrom:
                 secretKeyRef:
@@ -122,6 +124,8 @@ spec:
                 secretKeyRef:
                   key: OIDC_SERVER_APPLICATION_URL
                   name: romm-secrets
+            - name: PLAYMATCH_API_ENABLED
+              value: "true"
             - name: REDIS_HOST
               valueFrom:
                 secretKeyRef:
